package com.pablozoani.designpattern.z_trash.models.artist;

public enum LiteraryGenre {DRAMA, POETRY, FICTION, NONFICTION}
