package com.pablozoani.designpattern.z_trash.models.artist;

/**
 * Marker Interface for Performable Works.
 */
public interface Performable {
}
