package com.pablozoani.designpattern.z_trash.models.artist;

public class Sculptor extends Artist<Sculpture> {

    public Sculptor(String completeName) {
        super(completeName);
    }
}
